[package]
name = "octopt"
version = "0.1.4"
authors = ["Tobias V. Langhoff"]
edition = "2021"
license = "MIT"
description = "CHIP-8 configuration"
repository = "https://github.com/tobiasvl/octopt"
categories = ["config"]
documentation = "https://docs.rs/octopt"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_with = { version = "2", features = ["json"] }
serde_json = "1.0"
serde_repr = "0.1"
serde_ini = "0.2"
css-color-parser2 = "1"

[dev-dependencies]
assert-json-diff = "2"
reqwest = { version = "0.11", features = ["blocking"] }
