[package]
name = "octopt"
version = "1.0.1"
authors = ["Tobias V. Langhoff <tobias@langhoff.no>"]
edition = "2021"
license = "MIT"
description = "CHIP-8 configuration"
repository = "https://github.com/tobiasvl/octopt"
categories = ["config"]
documentation = "https://docs.rs/octopt"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_with = { version = "3.6", features = ["json"] }
serde_json = "1.0"
serde_repr = "0.1"
serde_ini = "0.2"
css-color-parser2 = "1"
parse-display = "0.9"

[dev-dependencies]
assert-json-diff = "2"
reqwest = { version = "0.11", features = ["blocking"] }
